implementera IQR outlier detektion i analyzer. Edgetest fungerar nu.